<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gym Flow</string>
    <string name="new_set">NEW SET</string>
    <string name="add_new">ADD NEW</string>
    <string name="comments">Comments</string>
    <string name="last_set">YOUR LAST SET</string>
    <string name="view_more_sessions">VIEW MORE SESSIONS</string>
    <string name="complete_set">COMPLETE SET</string>
    <string name="weight">Weight:</string>
    <string name="enter_exercise_name">Enter exercise name</string>
    <string name="save">Save</string>
    <string name="exercise_name">New Exercise</string>
    <string name="x_pounds">%1$slbs</string>
    <string name="x_reps">%1$d REPS</string>
    <string name="reps">Reps:</string>
    <string name="weight_x">Weight: %1$dlbs</string>
    <string name="reps_x">Reps: %1$d</string>
    <string name="x_history">%1$s HISTORY</string>
    <string name="new_exercise">NEW EXERCISE</string>
    <string name="date_weight">&lt;b>%1$s&lt;/b> - %2$dlbs</string>
    <string name="youve_lifted">YOU\'VE LIFTED</string>
    <string name="over_x_days">in %1$s days</string>
    <string name="delete_selected_exercises">Delete Selected Exercises</string>
    <string name="exercise_date">%1$s - %2$s</string>

    <string name="bro_do_u_even_lift">BRO, DO U EVEN LIFT?</string>
    <string name="cool_story_bro">COOL STORY BRO</string>
    <string name="u_mad_bro">U MAD BRO?</string>
    <string name="time_to_get_wheysted">TIME TO GET WHEYSTED!</string>
    <string name="na">N/A</string>

</resources>
